[Android] Report correct PageRange to onWrite* callbacks

Currently we report onWrite* callbacks PageRange from what we get
from `onWrite`. However, It will give PageRange.ALL_PAGES when
printing all pages. This behavior is fine for now but will not
be accepted in future.

This CL changed the behavior to report how many pages we need
to print if print all pages.

Bug: 733852
Change-Id: Iff1fe57baf1989910f0c29329b42bfbf26c86e05