android_webview/java/src/org/chromium/android_webview/AwPrintDocumentAdapter.java
@@ -12,7 +12,6 @@ import android.print.PageRange;
 import android.print.PrintAttributes;
 import android.print.PrintDocumentAdapter;
 import android.print.PrintDocumentInfo;
-import android.webkit.ValueCallback;
 
 import java.util.ArrayList;
 
@@ -73,18 +72,29 @@ public class AwPrintDocumentAdapter extends PrintDocumentAdapter {
             return;
         }
 
-        mPdfExporter.exportToPdf(
-                destination, mAttributes, normalizeRanges(pages), new ValueCallback<Boolean>() {
+        mPdfExporter.exportToPdf(destination, mAttributes,
+                normalizeRanges(pages), new AwPdfExporter.AwPdfExporterCallback() {
                     @Override
-                    public void onReceiveValue(Boolean value) {
-                        if (value) {
-                            callback.onWriteFinished(pages);
+                    public void pdfWritingDone(boolean success, int pageCount) {
+                        if (success) {
+                            callback.onWriteFinished(validatePageRanges(pages, pageCount));
                         } else {
                             // TODO(sgurun) provide a localized error message
                             callback.onWriteFailed(null);
                         }
                     }
                 }, cancellationSignal);
+    }
+
+    private PageRange[] validatePageRanges(PageRange[] pages, int pageCount) {
+        if (pages.length == 1 && PageRange.ALL_PAGES.equals(pages[0])) {
+            PageRange[] fullPages = new PageRange[pageCount];
+            for (int i = 0; i < pageCount; ++i) {
+                fullPages[i] = new PageRange(i, i);
+            }
+            return fullPages;
+        }
+        return pages;
     }
 
     private int[] normalizeRanges(final PageRange[] ranges) {
