printing/android/java/src/org/chromium/printing/PrintingControllerImpl.java
@@ -204,11 +204,11 @@ public class PrintingControllerImpl implements PrintingController, PdfGenerator 
     }
 
     @Override
-    public void pdfWritingDone(boolean success) {
+    public void pdfWritingDone(boolean success, int pageCount) {
         if (mPrintingState == PRINTING_STATE_FINISHED) return;
         mPrintingState = PRINTING_STATE_READY;
         if (success) {
-            PageRange[] pageRanges = convertIntegerArrayToPageRanges(mPages);
+            PageRange[] pageRanges = convertIntegerArrayToPageRanges(mPages, pageCount);
             mOnWriteCallback.onWriteFinished(pageRanges);
         } else {
             mOnWriteCallback.onWriteFailed(mErrorMessage);
@@ -330,7 +330,7 @@ public class PrintingControllerImpl implements PrintingController, PdfGenerator 
         }
     }
 
-    private static PageRange[] convertIntegerArrayToPageRanges(int[] pagesArray) {
+    private static PageRange[] convertIntegerArrayToPageRanges(int[] pagesArray, int pageCount) {
         PageRange[] pageRanges;
         if (pagesArray != null) {
             pageRanges = new PageRange[pagesArray.length];
@@ -338,9 +338,11 @@ public class PrintingControllerImpl implements PrintingController, PdfGenerator 
                 int page = pagesArray[i];
                 pageRanges[i] = new PageRange(page, page);
             }
-        } else {
-            // null corresponds to all pages in Chromium printing logic.
-            pageRanges = new PageRange[] { PageRange.ALL_PAGES };
+        } else { // null corresponds to all pages in Chromium printing logic.
+            pageRanges = new PageRange[pageCount];
+            for (int i = 0; i < pageCount; ++i) {
+                pageRanges[i] = new PageRange(i, i);
+            }
         }
         return pageRanges;
     }
